--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <!-- DaisuUI + Tailwind -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.0/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Font-Awesome -->
+    <script src="https://kit.fontawesome.com/e6dd063855.js" crossorigin="anonymous"></script>
     <!-- Manrope-Google-Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -32,14 +34,26 @@
 </head>
 <body class="font-manrope">
     <header>
-        <div class="hero min-h-screen bg-base-200">
-            <div class="hero-content flex-col lg:flex-row-reverse">
-              <img src="images/banner.png" class="max-w-sm rounded-lg shadow-2xl" />
+        <div class="hero ">
+            <div class="hero-content flex-col lg:flex-row">
+              
               <div>
-                <h1 class="text-5xl font-bold">Box Office News!</h1>
-                <p class="py-6">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
-                <button class="btn btn-primary">Get Started</button>
+                <h1 class="text-5xl font-bold">It's good <br>
+                    tea time at The <br>Tea House</h1>
+                <p class="py-6">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.</p>
+                <button class="btn btn-primary">Explore More</button>
               </div>
+              <div class="banner-image">
+                <img src="images/banner.png" class="max-w-sm" />
+                <div class="flex items-center gap-4 drop-shadow-lg bg-white w-60 p-4 rounded-xl text-center -mt-16" >
+                  <i class="fa-solid fa-star text-3xl" style="color: #FFD43B;"></i>
+                  <div>
+                      <p class="text-3xl font-bold">5.00</p>
+                      <p>Trust Pilot Ratings</p>
+                  </div>
+                </div>
+              </div>
+              
             </div>
           </div>
     </header>
